Stream Raiders: Fix Emerald z-index

--- a/src/Modules/StreamRaiders/streamRaiders.css
+++ b/src/Modules/StreamRaiders/streamRaiders.css
@@ -39,8 +39,6 @@
     position: absolute;
     bottom: 14px;
     left: 898px;
-    /*transform: translateX(-50%);*/
-    z-index: 10;
 }
 
 .absolute {
